Fix gap

--- a/src/components/pages/projects/index.module.css
+++ b/src/components/pages/projects/index.module.css
@@ -2,7 +2,7 @@
   display: grid;
   margin-top: 48px;
   --column-width: 300px;
-  gap: 16px;
+  gap: 24px;
   grid-template-columns: repeat(auto-fill, minmax(var(--column-width), 1fr));
   grid-template-rows: repeat(
 		auto-fill,
